cleaned pin loading, now load pins on page load, added quickplay for playlists, fixed song title not showing correctly when playing from playlist

--- a/src/app/pages/Page.css
+++ b/src/app/pages/Page.css
@@ -29,7 +29,7 @@
         height: 82dvh;
 
         overflow-y: scroll;
-        background-color: var(--bg);
+        background: radial-gradient(var(--bg-light), var(--bg));
         box-sizing: border-box;
 
         border: 1px solid var(--border);
