--- a/src/app/sidebar/Sidebar.css
+++ b/src/app/sidebar/Sidebar.css
@@ -24,7 +24,7 @@
     height: 100%;
     width: 100%;
 
-    background: var(--bg);
+    background: linear-gradient(to bottom, var(--bg), var(--bg-light));
     border: 1px solid var(--border);
     border-radius: 8px;
 
